--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Form Wave</h1>
+<div class="container">
+    <h1>Please Login</h1>
+
+    <form action="">
+        <div class="form-control">
+            <input type="text" name="" id="email" required>
+            <label for="email">Email</label>
+        </div>
+        <div class="form-control">
+            <input type="text" name="" id="password" required>
+            <label for="password">Password</label>
+        </div>
+
+        <button class="btn">Login</button>
+        <p class="text">Don't have an account? <a href="">Register</a></p>
+        
+    </form>
+</div>
+    <script src="script.js"></script>
 </body>
 </html>
